--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -76,7 +76,17 @@
 
         Ne contient ni publicités, ni autorisations inutiles. Complétement opensource, fournit un thème sombre également.
 
-        Cette application est juste une pièce d\'une plus grande série d\'applications. Vous pouvez trouver le reste de celles-ci à https://www.simplemobiletools.com
+        <b>Check out the full suite of Simple Tools here:</b>
+        https://www.simplemobiletools.com
+
+        <b>Standalone website of Simple Notes Pro:</b>
+        https://www.simplemobiletools.com/notes
+
+        <b>Facebook:</b>
+        https://www.facebook.com/simplemobiletools
+
+        <b>Reddit:</b>
+        https://www.reddit.com/r/SimpleMobileTools
     </string>
 
     <!--
