--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -76,7 +76,17 @@
 
         Gyda dim hysbysebion a dim eisiau unrhyw ganiatâd di-angen. Mae\'n gyfan gwbl god agored a gellir addasu lliwiau\'r ap.
 
-        Mae\'r ap hwn yn un mewn casgliad o apiau. Gweler y gweddill ar https://www.simplemobiletools.com
+        <b>Check out the full suite of Simple Tools here:</b>
+        https://www.simplemobiletools.com
+
+        <b>Standalone website of Simple Notes Pro:</b>
+        https://www.simplemobiletools.com/notes
+
+        <b>Facebook:</b>
+        https://www.facebook.com/simplemobiletools
+
+        <b>Reddit:</b>
+        https://www.reddit.com/r/SimpleMobileTools
     </string>
 
     <!--
