--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -76,7 +76,17 @@
 
         Δεν περιέχει διαφημίσεις ή περιττές άδειες. Είναι πλήρως ανοιχτού κώδικα, και παρέχει προσαρμόσιμα χρώματα.
 
-        Αυτή η εφαρμογή είναι μόνο ένα μέρος μιας μεγαλύτερης σειράς εφαρμογών. Μπορείτε να βρείτε τις υπόλοιπες στη διεύθυνση https://www.simplemobiletools.com
+        <b>Check out the full suite of Simple Tools here:</b>
+        https://www.simplemobiletools.com
+
+        <b>Standalone website of Simple Notes Pro:</b>
+        https://www.simplemobiletools.com/notes
+
+        <b>Facebook:</b>
+        https://www.facebook.com/simplemobiletools
+
+        <b>Reddit:</b>
+        https://www.reddit.com/r/SimpleMobileTools
     </string>
 
     <!--
