--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -76,10 +76,10 @@
 
         Bevat geen advertenties of onnodige permissies. Volledig open-source. Kleuren van de app kunnen worden aangepast.
 
-        <b>Check out the full suite of Simple Tools here:</b>
+        <b>Probeer ook eens de andere apps van Simple Tools:</b>
         https://www.simplemobiletools.com
 
-        <b>Standalone website of Simple Notes Pro:</b>
+        <b>Website voor Eenvoudige Notities Pro:</b>
         https://www.simplemobiletools.com/notes
 
         <b>Facebook:</b>
