--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -79,7 +79,7 @@
         <b>Basit Araçlar paketinin tamamını buradan inceleyin:</b>
         https://www.simplemobiletools.com
 
-        <b>Basit Notlar Pro'nun bağımsız web sitesi:</b>
+        <b>Basit Notlar Pro\'nun bağımsız web sitesi:</b>
         https://www.simplemobiletools.com/notes
 
         <b>Facebook:</b>
