--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -91,7 +91,7 @@
         <b>Δείτε την πλήρη σειρά των Απλών Εργαλείων εδώ:</b>
         https://www.simplemobiletools.com
 
-        <b>Standalone website of Simple Notes Pro:</b>
+        <b>Αποκλειστική ιστοσελίδα της Απλές σημειώσεις Pro:</b>
         https://www.simplemobiletools.com/notes
 
         <b>Facebook:</b>
